--- a/main.html
+++ b/main.html
@@ -1,137 +1,22 @@
 <!DOCTYPE html>
-<html>
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/img/favicon.png">
-    <title>SmartDataWay</title>
-    <!--if lt IE 9script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')-->
-    <link rel="stylesheet" href="./theme/icons/flags/flags.css" media="all">
-    <link rel="stylesheet" href="./theme/lib/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
-    <link rel="stylesheet" href="./theme/glr/libs/assets/animate.css/animate.css" type="text/css" />
-    <link rel="stylesheet" href="./theme/glr/libs/assets/font-awesome/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="./theme/glr/libs/assets/simple-line-icons/css/simple-line-icons.css" type="text/css" />
-    <link rel="stylesheet" href="./theme/glr/css/font.css" type="text/css" />
-    <link rel="stylesheet" href="./theme/glr/css/app.css" type="text/css" />
-    <link href="./assets/css/style.css" rel="stylesheet">
-    <link href="./assets/css/app.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="" type="text/css" id="theme" />
-    <link rel="stylesheet" href="./bower_components/angular-material/angular-material.css" />
-    <link rel="stylesheet" href="./bower_components/angular-material/angular-material.layouts.css" />
-    <!--Theme css START-->
-    <link rel="stylesheet" href="./theme/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./theme/css/main.min.css" />
-    <link rel="stylesheet" href="./theme/css/print.css" />
-    <link href="./theme/icons/elegant/style.css" rel="stylesheet" media="all">
-    <link href="./theme/icons/elusive/css/elusive-webfont.css" rel="stylesheet" media="all">
-
-    <!--<link rel="stylesheet" href="./theme/glr/libs/jquery/bootstrap/dist/css/bootstrap.css" type="text/css" />-->
-
-    <!--Theme css END-->
-    <script src="./assets/js/common.js"></script>
-    <script src="./bower_components/angular/angular.min.js"></script>
-    <script src="./bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="./bower_components/angular-aria/angular-aria.min.js"></script>
-    <script src="./bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="./bower_components/angular-material/angular-material.min.js"></script>
-    <script src="./bower_components/angular-route/angular-route.min.js"></script>
-    <!--<script src="./bower_components/bootstrap/dist/js/bootstrap.js"></script>-->
-    <!--Theme js START-->
-    <script src="./theme/bootstrap/js/bootstrap.min.js"></script>
-    <script src="./theme/js/countUp.min.js"></script>
-    <script src="./theme/js/fastclick.min.js"></script>
-    <script src="./theme/js/jquery.min.js"></script>
-    <script src="./theme/js/jquery.steps.custom.min.js"></script>
-    <script src="./theme/js/jqueryCookie.min.js"></script>
-    <script src="./theme/js/moment-with-langs.min.js"></script>
-    <script src="./theme/js/parsley.config.js"></script>
-    <script src="./theme/js/retina.min.js"></script>
-    <script src="./theme/js/yukon_all.js"></script>
-    <script src="./theme/lib/switchery/dist/switchery.min.js"></script>
-    <script src="./theme/lib/typeahead/typeahead.bundle.min.js"></script>
-    <script src="./theme/lib/jquery-match-height/jquery.matchHeight-min.js"></script>
-    <script src="./theme/lib/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
-    <!--Theme js END-->
-    <script src="./theme/js/bootstrap.min.js"></script>
-    <script src="./theme/js/scripts.js"></script>
-    <script src="http://rawgit.com/YousefED/ElasticUI/master/examples/demo/lib/elasticsearch.angular.js"></script>
-    <script src="http://rawgit.com/YousefED/ElasticUI/master/examples/demo/lib/elastic.js"></script>
-    <script src="./bower_components/elasticui/dist/elasticui.min.js"></script>
-    <script src="./scripts/sdwApp.js"></script>
-    <script src="./scripts/services/elasticService.js"></script>
-    <script src="./scripts/services/webmailService.js"></script>
-    <script src="./scripts/controllers/elasticController.js"></script>
-    <script src="./assets/js/app/search.js"></script>
-    <script src="./assets/js/app/file.js"></script>
-    <script src="./assets/js/require.js"></script>
-    <script src="./assets/js/main.js"></script>
-    <script src="./theme/glr/libs/jquery/jquery/dist/jquery.js"></script>
-    <script src="./theme/glr/libs/jquery/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="./theme/glr/js/ui-load.js"></script>
-    <script src="./theme/glr/js/ui-jp.config.js"></script>
-    <script src="./theme/glr/js/ui-jp.js"></script>
-    <script src="./theme/glr/js/ui-nav.js"></script>
-    <script src="./theme/glr/js/ui-toggle.js"></script>
-
-</head>
-
-<body ng-app='sdw' ng-controller="ElasticController as ectrl" eui-index="'{{indexName}}'" class="side_menu_active side_menu_expanded"
-ng-cloak>
-
-    <div class="navbar navbar-default">
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-            <div class="navbar-header">
-
-            </div><a class="navbar-brand" href="">SmartDataWay</a>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <div class="search_section">
-                <input type="text" placeholder="Search..." class="ng-scope ng-valid ng-dirty form-control input-sm" ng-model="querystring"
-                eui-enabled="querystring.length" eui-query="ejs.MatchQuery('content', querystring)">
-            </div>
-        </div>
-    </div>
-
-    <style>
-        .container {
-            height: 600px;
-            width: auto;
+     <style>
+           html, body {
+            width: 100%;
+            height: 100%;
             margin: 0;
             padding: 0;
-        }
+         }
     </style>
-    <div class="container sdw-no-space-tab">
-        <div class="tab-content sdw-no-space-tab">
-            <md-content>
-                <md-tabs md-dynamic-height="" md-border-bottom="">
-                    <md-tab label="Email">
-                        <md-content>
-                            <div class="container">
-                                <webview id="mailfoo" minwidth="576" minheight="432" src="http://localhost:9125"></webview>
-                            </div>
-                        </md-content>
-                    </md-tab>
-                    <md-tab label="Search">
-                        <md-content>
-                            <div class="container" id="searchTab" ng-include="'tpl/search.html'"></div>
-                        </md-content>
-                    </md-tab>
-                </md-tabs>
-            </md-content>
-        </div>
-    </div>
-    <script>
-        onload = function() {
-            var webView = document.getElementById('mailfoo');
-            webView.executeJavaScript("document.querySelector('body:first-child').scrollTop=100");
-        }
-    </script>
-
-
-</body>
-
+</head>
+<html>
+    <body>
+       <webview id="mailfoo" autosize="on"  src="http://localhost:9125"></webview>
+        <script>
+            onload = function() {
+                var webView = document.getElementById('mailfoo');
+                webView.executeJavaScript("document.querySelector('body:first-child').scrollTop=100");
+            }
+        </script>
+    </body>
 </html>
